# OpenGardenPlatformer

./: .gitignore  CMakeLists.txt  README.md
OGP/: CMakeLists.txt
OGP/include/OGP/: Delegate.hpp  Game.hpp
OGP/include/OGP/Cells/: EGardenCellType.hpp
OGP/include/OGP/Collections/: EGridResizingRule.hpp  ResizableGrid.hpp
OGP/include/OGP/Entities/: EGardenEntityType.hpp  ELiftMovementState.hpp  EWormMovementState.hpp  GardenEntityData.hpp
OGP/include/OGP/Environment/: EGardenCellType.hpp  EGardenEntityType.hpp  GardenCollectionData.hpp  GardenData.hpp  GardenEntityData.hpp
OGP/include/OGP/Environment/Legacy/: ELegacyGardenAirCellTypeVariant.hpp  ELegacyGardenCellType.hpp  ELegacyGardenClimbableCellTypeVariant.hpp  ELegacyGardenDoorCellTypeVariant.hpp  ELegacyGardenEntityType.hpp  ELegacyGardenFlowerEntityVariantType.hpp  ELegacyGardenFruitEntityVariantType.hpp  ELegacyGardenGroundCellTypeVariant.hpp  ELegacyGardenKeyEntityVariantType.hpp  ELegacyGardenLiftEntityVariantType.hpp  ELegacyGardenVegetableEntityVariantType.hpp  ELegacyGardenWaterCellTypeVariant.hpp  ELegacyGardenWormEntityVariantType.hpp
OGP/include/OGP/EventSystem/: Event.hpp  ObserverID.hpp
OGP/include/OGP/Exportables/: Exportable.hxx
OGP/include/OGP/Hashing/: BaseStringHash.hpp  StringHash.hpp
OGP/include/OGP/InputSystem/: EInputEventValueType.hpp  IInputHandler.hpp  InputEvent.hpp
OGP/include/OGP/InputSystem/Raylib/: RaylibGamepadInputEvents.hpp  RaylibInputHandler.hpp
OGP/include/OGP/Math/: Bounds.hpp  Easing.hpp  Ratio.hpp  Rectangle.hpp  Vector2.hpp
OGP/include/OGP/Rendering/: Color.hpp  IRenderer.hpp  RenderingContext.hpp  RenderingContextElement.hpp
OGP/include/OGP/Rendering/Raylib/: RaylibWindowRenderer.hpp
OGP/include/OGP/ResourceManagement/: AResourceManager.hpp  FileSystem.hpp  ResourceID.hpp
OGP/include/OGP/ResourceManagement/Raylib/: RaylibTexture2DResourceManager.hpp
OGP/include/OGP/SceneManagement/: Node.hpp
OGP/include/OGP/Scripting/: Script.hpp
OGP/include/OGP/Scripting/Cells/: CellScript.hpp  ClimbableCellScript.hpp  DeadlyCellScript.hpp  DiggableCellScript.hpp  DoorCellScript.hpp  MoleHillCellScript.hpp  SolidCellScript.hpp  TopDeadlyCellScript.hpp
OGP/include/OGP/Scripting/Entities/: EntityScript.hpp  LiftEntityScript.hpp  MarmotEntityScript.hpp  PickupEntityScript.hpp  PlayerEntityScript.hpp  QuestionMarkEntityScript.hpp  WormEntityScript.hpp
OGP/include/OGP/Scripting/Environment/: GardenCameraScript.hpp  GardenCollectionScript.hpp  GardenScript.hpp
OGP/include/OGP/Scripting/Rendering/: CameraScript.hpp  SpriteRendererScript.hpp
OGP/include/OGP/Serialization/: IGardenCollectionDeserializer.hpp  LegacyGardenCollectionDeserializer.hpp
OGP/src/: Game.cpp
OGP/src/EventSystem/: ObserverID.cpp
OGP/src/InputSystem/: InputEvent.cpp
OGP/src/InputSystem/Raylib/: RaylibGamepadInputEvents.cpp  RaylibInputHandler.cpp
OGP/src/Rendering/: RenderingContext.cpp  RenderingContextElement.cpp
OGP/src/Rendering/Raylib/: RaylibWindowRenderer.cpp
OGP/src/ResourceManagement/: FileSystem.cpp
OGP/src/ResourceManagement/Raylib/: RaylibTexture2DResourceManager.cpp
OGP/src/SceneManagement/: Node.cpp
OGP/src/Scripting/: Script.cpp
OGP/src/Scripting/Cells/: CellScript.cpp  ClimbableCellScript.cpp  DeadlyCellScript.cpp  DiggableCellScript.cpp  DoorCellScript.cpp  MoleHillCellScript.cpp  SolidCellScript.cpp  TopDeadlyCellScript.cpp
OGP/src/Scripting/Entities/: EntityScript.cpp  LiftEntityScript.cpp  MarmotEntityScript.cpp  PickupEntityScript.cpp  PlayerEntityScript.cpp  QuestionMarkEntityScript.cpp  WormEntityScript.cpp
OGP/src/Scripting/Environment/: GardenCameraScript.cpp  GardenCollectionScript.cpp  GardenScript.cpp
OGP/src/Scripting/Rendering/: CameraScript.cpp  SpriteRendererScript.cpp
OGP/src/Serialization/: LegacyGardenCollectionDeserializer.cpp
OGPEditor/: CMakeLists.txt
OGPEditor/src/: main.cpp
OGPGame/: CMakeLists.txt
OGPGame/src/: main.cpp
docs/: LEGACY.md
