cmake_minimum_required (VERSION 3.8)

if (POLICY CMP0141)
	cmake_policy (SET CMP0141 NEW)
	set (CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif ()

############################
#                          #
#  Open Garden Platformer  #
#                          #
############################

project (OGP
	VERSION "0.0.0"
	DESCRIPTION "Open Garden Platformer Engine"
)

add_subdirectory ("OGP")

#################################
#                               #
#  Open Garden Platformer Game  #
#                               #
#################################

project (OGPGame
	VERSION "0.0.0"
	DESCRIPTION "Open Garden Platformer Game"
)

add_subdirectory ("OGPGame")

###################################
#                                 #
#  Open Garden Platformer Editor  #
#                                 #
###################################

project (OGPEditor
	VERSION "0.0.0"
	DESCRIPTION "Open Garden Platformer Editor"
)

add_subdirectory ("OGPEditor")
